tests/src/frontend/syntax/invalid/dict_mixed_literal.sk
fun main(): String {
  v = Dict [ "key" => "Hello world!\n", ("key2", "Fail!") ];
  v["key"]
}
